--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/image/logo/trovka-icon.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="/image/logo/trovka-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- HTML Meta Tags -->
+    <title></title>
+    <meta name="description" content="" />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://trov-ka-3ekt.vercel.app/my-service"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content=""TrovKa />
+    <meta property="og:description" content="Browse all available services on TrovKa and find the perfect match for your needs." />
+    <meta property="og:image" content="https://i.ibb.co/s6D2gFC/trovka-icon.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="trov-ka-3ekt.vercel.app" />
+    <meta
+      property="twitter:url"
+      content="https://trov-ka-3ekt.vercel.app/my-service"
+    />
+    <meta name="twitter:title" content="TrovKa" />
+    <meta name="twitter:description" content="Browse all available services on TrovKa and find the perfect match for your needs." />
+    <meta name="twitter:image" content="https://i.ibb.co/s6D2gFC/trovka-icon.png" />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
     <div id="root"></div>
@@ -18,7 +40,7 @@
     ></script>
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.js" 
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.js"
     ></script>
     <script
       src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
