--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/image/logo/trovka-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
-    <title></title>
-    <meta name="description" content="" />
+    <title>TrovKa</title>
+    <meta name="description" content="Browse all available services on TrovKa and find the perfect match for your needs." />
 
     <!-- Facebook Meta Tags -->
     <meta
