--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       content="https://trov-ka-3ekt.vercel.app/my-service"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content=""TrovKa />
+    <meta property="og:title" content="TrovKa" />
     <meta property="og:description" content="Browse all available services on TrovKa and find the perfect match for your needs." />
     <meta property="og:image" content="https://i.ibb.co/s6D2gFC/trovka-icon.png" />
 
